PrinterTestCases were added with 100% code coverage

--- a/RustyDragonInn/RustyDragonTests/RustyDragonTests.csproj
+++ b/RustyDragonInn/RustyDragonTests/RustyDragonTests.csproj
@@ -58,7 +58,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CheeseTest.cs" />
+    <Compile Include="CheeseTests.cs" />
+    <Compile Include="PrinterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReaderTests.cs" />
   </ItemGroup>
