--- a/RustyDragonInn/RustyDragonTests/RustyDragonTests.csproj
+++ b/RustyDragonInn/RustyDragonTests/RustyDragonTests.csproj
@@ -74,6 +74,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheeseValidatorTests.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
