--- a/RustyDragonInn/RustyDragonTests/RustyDragonTests.csproj
+++ b/RustyDragonInn/RustyDragonTests/RustyDragonTests.csproj
@@ -59,6 +59,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CheeseTests.cs" />
+    <Compile Include="DaysManagerTests.cs" />
     <Compile Include="PrinterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReaderTests.cs" />
